--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/b/index.xhtml
@@ -9,7 +9,7 @@
 		<ui:define name="htmlHead">
 			<script>
 				var dialogSize = {
-					width : 800,
+					width : 620,
 					height : 350
 				};
 			</script>
@@ -24,57 +24,57 @@
 
 		<!-- PAGE CONTENT -->
 		<ui:define name="content">
-			<div id="contents-area">
-				<div id="left-content" style="display: inline-block;">
-					<div>
-						<button tabindex="1" data-bind="enable: screenMode() == 0 || screenMode() == 3, click: addHistory">#{i18n.getText('CMM011-0_17')}</button>
-						<button tabindex="2" data-bind="enable: screenMode() == 0, click: updateHistory">#{i18n.getText('CMM011-0_18')}</button>
-						<button tabindex="3" class="danger" data-bind="enable: isLatestHistory() || screenMode() == 3, click: deleteHistory">#{i18n.getText('CMM011-0_19')}</button>
+			<div id="contents-area" class="fixed-flex-layout">
+				<div class="fixed-flex-layout-left">
+					<div class="valign-center control-group" style="padding-top: 20px">
+						<button tabindex="1" data-bind="enable: screenMode() == 0 || screenMode() == 3, click: addHistory">#{i18n.getText('CMM011_117')}</button>
+						<button tabindex="2" data-bind="enable: screenMode() == 0, click: updateHistory">#{i18n.getText('CMM011_118')}</button>
+						<button tabindex="3" class="danger" data-bind="enable: isLatestHistory() || screenMode() == 3, click: deleteHistory">#{i18n.getText('CMM011_119')}</button>
 					</div>
 
 					<div id="list-box" tabindex="4"
 						data-bind="ntsListBox: {
-						name: '#[CMM011-0_20]',
+						name: '#[CMM011_120]',
 						options: lstWpkHistory,
 						optionsValue: 'historyId',
 						optionsText: 'displayText',
 						multiple: false,
 						value: selectedHistoryId,
 						enable: true,
-						rows: 4,
+						rows: 5,
 						columns: [
 							{ key: 'displayText', length: 15 }
 						]}"></div>
 				</div>
 
-				<div id="right-content" style="display: inline-block;">
-					<div class="valign-center control-group">
-						<span class="label" data-bind="if: screenMode() == 0">#{i18n.getText('CMM011-0_21')}</span>
-						<span class="label" data-bind="if: screenMode() == 1 || screenMode() == 2">#{i18n.getText('CMM011-0_22')}</span>
-						<span class="label" data-bind="if: screenMode() == 3">#{i18n.getText('CMM011-0_23')}</span>
+				<div class="fixed-flex-layout-right">
+					<div class="valign-center control-group" style="padding-top: 20px">
+						<span class="label" data-bind="visible: screenMode() == 0">#{i18n.getText('CMM011_121')}</span>
+						<span class="label" data-bind="visible: screenMode() == 1 || screenMode() == 2">#{i18n.getText('CMM011_122')}</span>
+						<span class="label" data-bind="visible: screenMode() == 3">#{i18n.getText('CMM011_123')}</span>
 					</div>
 					<div class="valign-center control-group">
-						<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CMM011_23')}</div>
+						<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CMM011_124')}</div>
 				        <div tabindex="5" id="B3_5" data-bind="ntsDatePicker: {
-							name: '#[CMM011-0_26]', 
+							name: '#[CMM011_126]', 
 							required: true, 
 							value: selectedStartDateInput, 
 							dateFormat: 'YYYY/MM/DD', 
 							enable: true}, visible: screenMode() == 1 || screenMode() == 2 || screenMode() == 3"></div>
 						<span class="label" data-bind="text: selectedStartDateText, visible: screenMode() == 0"></span>
-						<span class="label">#{i18n.getText('CMM011-0_25')}</span>
+						<span class="label">#{i18n.getText('CMM011_125')}</span>
 						<span class="label" data-bind="text: selectedEndDate"></span>
 					</div>
-					<div class="valign-center control-group" data-bind="if: screenMode() == 2">
-						<div tabindex="6" data-bind="ntsCheckBox: { checked: copyPreviousConfig }, if: initMode() == 0">#{i18n.getText('CMM011-1_6')}</div>
-						<div tabindex="6" data-bind="ntsCheckBox: { checked: copyPreviousConfig }, if: initMode() == 1">#{i18n.getText('CMM011-2_6')}</div>
-						<button data-bind="ntsHelpButton: {textId: 'Help Button Text', position: 'right center' }">？</button>
+					<div class="valign-center control-group" data-bind="visible: screenMode() == 2">
+						<div tabindex="6" data-bind="ntsCheckBox: { checked: copyPreviousConfig }, visible: initMode() == 0">#{i18n.getText('CMM011_206')}</div>
+						<div tabindex="6" data-bind="ntsCheckBox: { checked: copyPreviousConfig }, visible: initMode() == 1">#{i18n.getText('CMM011_306')}</div>
+						<button data-bind="visible: false, ntsHelpButton: {textId: 'Help Button Text', position: 'right center' }">？</button>
 					</div>
 				</div>
 			</div>
 			<div id="functions-area-bottom">
-				<button class="x-large proceed" tabindex="7" data-bind="click: registerConfig, enable: $root.errors.isEmpty">#{i18n.getText('CMM011-0_27')}</button>
-				<button class="large" tabindex="8" data-bind="click: cancel">#{i18n.getText('CMM011-0_28')}</button>
+				<button class="x-large proceed" tabindex="7" data-bind="click: registerConfig, enable: $root.errors.isEmpty">#{i18n.getText('CMM011_127')}</button>
+				<button class="large" tabindex="8" data-bind="click: cancel">#{i18n.getText('CMM011_128')}</button>
 			</div>
 		</ui:define>
 	</ui:composition>
