--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/d/index.xhtml
@@ -10,6 +10,13 @@
         <script>
             var dialogSize = {width: 550, height: 600};
         </script>
+        <com:ValidatorScript>
+			nts.uk.ctx.bs.employee.dom.workplace.master.WorkplaceExternalCode
+			nts.uk.ctx.bs.employee.dom.workplace.master.WorkplaceDisplayName
+			nts.uk.ctx.bs.employee.dom.workplace.master.WorkplaceGeneric
+			nts.uk.ctx.bs.employee.dom.department.master.DepartmentCode
+			nts.uk.ctx.bs.employee.dom.department.master.DepartmentName
+		</com:ValidatorScript>
         <com:scriptfile set="IGNITE"/>
         <com:stylefile path="style.css"/>
         <com:scriptfile path="cmm011.v2.d.service.js"/>
@@ -19,89 +26,75 @@
 
     <ui:define name="content">
         <div id="contents-area">
-            <div data-bind="if: $vm.tagretHistory >= 1">
-                <div style="width: 500px" class="valign-center control-group">
-                    <div id="D1_1" data-bind="ntsFormLabel: { required: true }">
-                        #{i18n.getText('CMM011-0_33')}
-                    </div>
-                    <span data-bind="if: $vm.screenMode == 1" id="D1_2" class="label">
-                     #{i18n.getText('CMM011-1_10')}
-                 </span>
-                    <span data-bind="if: $vm.screenMode == 2" id="D1_2" class="label">
-                     #{i18n.getText('CMM011-2_10')}
-                 </span>
-                    <span id="D1_3" class="label">
-                    項目移送
-                 </span>
-                    <span id="D1_4" class="label">
-                    項目移送
-                </span>
-                </div>
-            </div>
-            <div class="radio" data-bind="if: $vm.tagretHistory >= 1">
-                <div id="D2_1" style="width: 200px;" tabindex="1" data-bind="ntsRadioBoxGroup: {
-                options: itemList,
-                optionsValue: 'id',
-                optionsText: 'name',
-                value: selectedId,
-                enable: enable}">
-                </div>
-            </div>
-            <div class="insert">
-                    <div class="item valign-center control-group">
-                        <div id="A5_1" data-bind="ntsFormLabel: { required: true,}">
-                            #{i18n.getText('CMM011-0_12')}
-                        </div>
-                        <input id="A5_2" data-bind="ntsTextEditor: {
-                                            name: '#[CMM011-0_12]',
-                                            value: code,
-                                            required: true,
-                                            enable: true}"/>
-                    </div>
-                    <div class="item valign-center control-group">
-                        <div id="A6_1" data-bind="ntsFormLabel: { required: true}">
-                            #{i18n.getText('CMM011-0_13')}
-                        </div>
-                        <input id="A6_2" data-bind="ntsTextEditor: {
-                                            name: '#[CMM011-0_13]',
-                                            value: name,
-                                            required: true,
-                                            enable: true}"/>
-                    </div>
-                    <div class="item valign-center control-group">
-                        <div id="A7_1" data-bind="ntsFormLabel: { required: true }">
-                            #{i18n.getText('CMM011-0_14')}
-                        </div>
-                        <input id="A7_2" data-bind="ntsTextEditor: {
-                                            name: '#[CMM011-0_14]',
-                                            value: displayName,
-                                            required: true,
-                                            enable: true}"/>
-                    </div>
-                    <div class="item valign-center control-group">
-                        <div id="A8_1" data-bind="ntsFormLabel: { required: true }">
-                            #{i18n.getText('CMM011-0_15')}
-                        </div>
-                        <input id="A8_2" data-bind="ntsTextEditor: {
-                                            name: '#[CMM011-0_15]',
-                                            value: genericName,
-                                            required: true,
-                                            enable: true}"/>
-                    </div>
-                    <div class="item valign-center control-group">
-                        <div id="A9_1" data-bind="ntsFormLabel: { }">
-                            #{i18n.getText('CMM011-0_16')}
-                        </div>
-                        <input id="A9_2" data-bind="ntsTextEditor: {
-                                            name: '#[CMM011-0_16]',
-                                            value: externalCode,
-                                            enable: true}"/>
-                    </div>
+				<div data-bind="if: $vm.tagretHistory >= 1">
+					<div style="width: 500px" class="valign-center control-group">
+						<div id="D1_1" data-bind="ntsFormLabel: { required: true }">
+							#{i18n.getText('CMM011_133')}</div>
+						<span data-bind="if: $vm.screenMode == 1" id="D1_2" class="label">
+							#{i18n.getText('CMM011_210')} </span> <span
+							data-bind="if: $vm.screenMode == 2" id="D1_2" class="label">
+							#{i18n.getText('CMM011_310')} </span> 
+						<span id="D1_3" class="label">項目移送</span>
+						<span id="D1_4" class="label">項目移送</span>
+					</div>
+				</div>
+				<div class="radio" data-bind="if: $vm.tagretHistory >= 1">
+					<div id="D2_1" style="width: 300px;" tabindex="1"
+						data-bind="ntsRadioBoxGroup: {
+			                options: itemList,
+			                optionsValue: 'id',
+			                optionsText: 'name',
+			                value: selectedId,
+			                enable: enable}">
+					</div>
+				</div>
+				<div class="insert">
+                    <div class="valign-center control-group">
+						<div data-bind="ntsFormLabel: {  required: true, constraint: 'DepartmentCode' }">#{i18n.getText('CMM011_112')}</div>
+						<input tabindex="12" id="A5_2" data-bind="ntsTextEditor: {
+							name: '#[CMM011_112]',
+							value: code,
+							constraint: 'DepartmentCode',
+							required: true, enable: true}" />
+					</div>
+					<div class="valign-center control-group">
+						<div data-bind="ntsFormLabel: {  required: true, constraint: 'DepartmentName' }">#{i18n.getText('CMM011_113')}</div>
+						<input tabindex="13" id="A6_2" data-bind="ntsTextEditor: {
+							name: '#[CMM011_113]',
+							value: name,
+							constraint: 'DepartmentName',
+							required: true, enable: true}" />
+					</div>
+					<div class="valign-center control-group">
+						<div data-bind="ntsFormLabel: {  required: true, constraint: 'WorkplaceDisplayName' }">#{i18n.getText('CMM011_114')}</div>
+						<input tabindex="14" id="A7_2" data-bind="ntsTextEditor: {
+							name: '#[CMM011_114]',
+							value: displayName,
+							constraint: 'WorkplaceDisplayName',
+							required: true, enable: true}" />
+					</div>
+					<div class="valign-center control-group">
+						<div data-bind="ntsFormLabel: {  required: true, constraint: 'WorkplaceGeneric' }">#{i18n.getText('CMM011_115')}</div>
+						<input tabindex="15" id="A8_2" data-bind="ntsTextEditor: {
+							name: '#[CMM011_115]',
+							value: genericName,
+							constraint: 'WorkplaceGeneric',
+							option: { width: '512px' },
+							required: true, enable: true}" />
+					</div>
+					<div class="valign-center control-group">
+						<div data-bind="ntsFormLabel: {  required: false, constraint: 'WorkplaceExternalCode' }">#{i18n.getText('CMM011_116')}</div>
+						<input tabindex="16" id="A9_2" data-bind="ntsTextEditor: {
+							name: '#[CMM011_116]',
+							value: externalCode,
+							constraint: 'WorkplaceExternalCode',
+							required: false, enable: true}" />
+					</div>
             </div>
         </div>
         <div id="functions-area-bottom">
-            <button id="D3_2" tabindex="2" data-bind="enable: $root.errors.isEmpty" class="x-large proceed">#{i18n.getText('CMM011-0_2')}</button>
-            <button id="D3_3" tabindex="3" class="large">#{i18n.getText('CMM011-0_28')}</button>
+            <button id="D3_2" tabindex="2" data-bind="enable: $root.errors.isEmpty" class="x-large proceed">#{i18n.getText('CMM011_102')}</button>
+            <button id="D3_3" tabindex="3" data-bind="click: cancel" class="large">#{i18n.getText('CMM011_128')}</button>
         </div>
     </ui:define>
 </ui:composition>
