--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/b/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/b/index.html
@@ -42,7 +42,7 @@
                     </nts-checkbox>
 
                 <div class="mt-3">
-                    <button class="btn btn-primary btn-block" @click="login"> {{'CCG007_3' | i18n}}</button>
+                    <button class="btn btn-primary btn-block" v-click:500="login"> {{'CCG007_3' | i18n}}</button>
                     <div class="text-center mt-2">
                         <button class="btn btn-link" @click="forgetPass"> {{ 'CCG007_6' | i18n }} </button>
                     </div>
