--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/c/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/c/index.html
@@ -60,7 +60,7 @@
         </div>
         <br/>
         <div class="mb-2">
-            <button class="btn btn-primary btn-block" v-on="$click(changePass.bind(this))">変更してログインする</button>
+            <button class="btn btn-primary btn-block" v-click:500="changePass">変更してログインする</button>
         </div>
     </fieldset>
 </div>
