--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/003/a/index.xhtml
@@ -53,6 +53,7 @@
                     nts.uk.ctx.at.record.dom.daily.optionalitemtime.AnyItemTimes
                     nts.uk.ctx.at.shared.dom.common.anyitem.AnyTimesMonth
                     nts.uk.ctx.at.record.dom.divergencetime.DiverdenceReasonCode
+                    nts.uk.ctx.at.record.dom.dailyperformanceformat.primitivevalue.BusinessTypeCode
                 </com:ValidatorScript>
             </ui:define>
 
