--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cdl/024/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cdl/024/index.xhtml
@@ -37,7 +37,7 @@
 							options: items,
 							optionsValue: 'code',
 							columns: columns,
-							multiple: true,
+							multiple: selectMultiple(),
 							value: currentCodeList
 						}"></table>
 				</div>
