--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/023/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/023/a/index.xhtml
@@ -27,15 +27,13 @@
             <button data-bind="click: saveTaxExe, enable: $root.errors.isEmpty"
                     tabindex="2" class="proceed">#{i18n.getText('QMM023_2')}</button>
             <!-- A1_3 -->
-            <button data-bind="click: printPdf, enable: false"
+            <button data-bind="click: exportExcel, enable: true"
                     tabindex="3">#{i18n.getText('QMM023_3')}</button>
             <!-- A1_4 -->
             <button data-bind="click: correctionLog, enable: false" tabindex="4">#{i18n.getText('QMM023_4')}</button>
             <!-- A1_5 -->
             <button class="danger" data-bind="click: deleteTaxExe, enable: !isNewMode()"
                     tabindex="5">#{i18n.getText('QMM023_5')}</button>
-            <!-- A1_4 -->
-            <button data-bind="click: exportExcel" tabindex="5">#{i18n.getText('QMM023_15')}</button>
         </div>
         <div id="contents-area">
             <div id="qmm-all" class="table">
