--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/013/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/013/a/index.xhtml
@@ -32,7 +32,7 @@
 					#{i18n.getText('QMM013_2')}
 				</button>
 				<!-- 印刷（PDF） -->
-				<button id="A1_3" tabindex="3" class="" data-bind="enable: false">
+				<button id="A1_3" tabindex="3" class="" data-bind="click: exportExcel, enable: true">
 					#{i18n.getText('QMM013_3')}
 				</button>
 				<!-- マスタ修正ログ -->
@@ -42,10 +42,6 @@
 				<!-- 削除 -->
 				<button id="A1_5" tabindex="5" class="deleteBtn danger" data-bind="click: deleteItem, enable: !checkCreate()">
 					#{i18n.getText('QMM013_5')}
-				</button>
-				<!-- Export Excel -->
-				<button id="" tabindex="5" class="" data-bind="click: exportExcel, enable: true">
-					#{i18n.getText('QMM013_41')}
 				</button>
 			</div>
 			<div id="contents-area">
