uppdate cmm011 screen c

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/c/index.xhtml
@@ -45,15 +45,16 @@
                                             height: 100,
                                             dataSource: inputList,
                                             columns: listColums,
-                                            primaryKey: 'code',
+                                            primaryKey: 'id',
                                             multiple: false,
-                                            value: currentCode}">
+                                            value: currentCode,
+                                            name:'#CMM011-0_29'}">
                 </table>
             </div>
         </div>
         <div id="functions-area-bottom">
-            <button id="C4_2" data-bind="enable: $root.errors.isEmpty, click: Create" class="proceed x-large">#{i18n.getText('CMM011-0_27')}</button>
-            <button id="C4_3" class="large" data-bind="click: Close">#{i18n.getText('CMM011-0_28')}</button>
+            <button id="C4_2" data-bind="enable: $root.errors.isEmpty, click: Create" class="proceed x-large" tabindex="3">#{i18n.getText('CMM011-0_27')}</button>
+            <button id="C4_3" class="large" data-bind="click: Close" tabindex="4">#{i18n.getText('CMM011-0_28')}</button>
         </div>
     </ui:define>
 </ui:composition>
