--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/kal003.a.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/kal003.a.style.css
@@ -22,13 +22,14 @@
 	vertical-align: top;
 }
 
-
 .right-content {
 	display: inline-block;
 	vertical-align: top;
 	padding-top: 20px;
 }
-
+.container {
+    width: 1430px;
+}
 div[class^="tab-content"] {
 	padding: 20px;
 }
@@ -130,9 +131,7 @@ div .tab-content-5 .nts-fixed-table .nts-fixed-body-container{
 #category7 .nts-fixed-table.cf .scroll-header.nts-fixed-header{
 	    display: none;
 }
-.check-box-sub{
-	margin-top: 20px;
-}
-.check-box-sub{
-	width: 200px;
+
+button.nts-switch-button{
+	width: 90px !important;
 }
