cmm011: update code

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/c/index.xhtml
@@ -29,7 +29,7 @@
                     #{i18n.getText('CMM011_307')}
                 </span>
             </div>
-            <div id="C2_1" style="width: 200px;" tabindex="1" data-bind="ntsRadioBoxGroup: {
+            <div id="C2_1" tabindex="1" data-bind="ntsRadioBoxGroup: {
                 name: '#CMM011-0_',
                 options: itemList,
                 optionsValue: 'id',
@@ -53,8 +53,8 @@
             </div>
         </div>
         <div id="functions-area-bottom">
-            <button id="C4_2" data-bind="enable: $root.errors.isEmpty, click: create" class="proceed x-large" tabindex="3">#{i18n.getText('CMM011-0_27')}</button>
-            <button id="C4_3" class="large" data-bind="click: close" tabindex="4">#{i18n.getText('CMM011-0_28')}</button>
+            <button id="C4_2" data-bind="enable: $root.errors.isEmpty, click: create" class="proceed x-large" tabindex="3">#{i18n.getText('CMM011_127')}</button>
+            <button id="C4_3" class="large" data-bind="click: close" tabindex="4">#{i18n.getText('CMM011_128')}</button>
         </div>
     </ui:define>
 </ui:composition>
