fixbug kal003 :#107325 ver 2

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/common/checkconditions.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/common/checkconditions.xhtml
@@ -36,7 +36,7 @@
 			        <col width="230px"/>
 			        <col width="90px"/>
 			        <col width="230px"/>
-			        <col width="230px"/>
+			        <col width="182px"/>
 			    </colgroup>
 			    <thead>
 			        <tr>
@@ -45,7 +45,7 @@
 			            <th class="ui-widget-header" >#{i18n.getText('KAL003_12')}</th>
 			            <th class="ui-widget-header" >#{i18n.getText('KAL003_23')}</th>
 			            <th class="ui-widget-header" >#{i18n.getText('KAL003_25')}</th>
-			            <th class="ui-widget-header" >#{i18n.getText('KAL003_XX')}</th>
+			            <th class="ui-widget-header" >#{i18n.getText('KAL003_188')}</th>
 			        </tr>
 		        </thead>
 		       <tbody data-bind="foreach: listWorkRecordExtractingConditions()">
@@ -129,7 +129,7 @@
 			        <col width="230px"/>
 			        <col width="90px"/>
 			        <col width="230px"/>
-			        <col width="230px"/>
+			        <col width="182px"/>
 			    </colgroup>
 			    <thead>
 			        <tr>
@@ -138,7 +138,7 @@
 			            <th class="ui-widget-header" >#{i18n.getText('KAL003_12')}</th>
 			            <th class="ui-widget-header" >#{i18n.getText('KAL003_23')}</th>
 			            <th class="ui-widget-header" >#{i18n.getText('KAL003_25')}</th>
-			            <th class="ui-widget-header" >#{i18n.getText('KAL003_XX')}</th>
+			            <th class="ui-widget-header" >#{i18n.getText('KAL003_188')}</th>
 			        </tr>
 		        </thead>
 		       <tbody data-bind="foreach: listMulMonCheckSet()">
