--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/monthly/checkalarmcommon.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/003/a/monthly/checkalarmcommon.xhtml
@@ -22,7 +22,7 @@
 			        <col width="200px"/>
 			        <col width="90px"/>
 			        <col width="190px"/>
-			        <col width="230px"/>
+			        <col width="182px"/>
 			    </colgroup>
 			    <thead>
 			        <tr>
@@ -31,7 +31,7 @@
 					<th class="ui-widget-header" style ="background-color: #CFF1A5;">#{i18n.getText('KAL003_12')}</th>
 					<th class="ui-widget-header" style ="background-color: #CFF1A5;">#{i18n.getText('KAL003_23')}</th>
 					<th class="ui-widget-header" style ="background-color: #CFF1A5;">#{i18n.getText('KAL003_25')}</th>
-					<th class="ui-widget-header" style ="background-color: #CFF1A5;">#{i18n.getText('KAL003_XX')}</th>
+					<th class="ui-widget-header" style ="background-color: #CFF1A5;">#{i18n.getText('KAL003_188')}</th>
 			        </tr>
 		        </thead>
 		       <tbody data-bind="foreach: listExtraResultMonthly">
