correct Html screen c cmm011

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/c/index.xhtml
@@ -48,7 +48,7 @@
                                             primaryKey: 'historyId',
                                             multiple: false,
                                             value: currentCode,
-                                            name:'#CMM011-0_29'}">
+                                            name:'#CMM011_129'}">
                 </table>
             </div>
         </div>
